# GarminPenguinExpress

./: .gitignore  README.md  pyproject.toml
docs/: bluetooth_passthrough_plan.md
packaging/: build_appimage.sh  build_arch.sh  build_deb.sh  build_rpm.sh  garmin-penguin-express.desktop
packaging/arch/: PKGBUILD.in
packaging/rpm/: garmin-penguin-express.spec.in
src/garmin_penguin_express/: __init__.py  __main__.py  activities_tab.py  activity_sync.py  app.py  config_store.py  connect_client.py  conversion.py  explorer.py  gio_utils.py  gui.py  sync_service.py  watch_profiles.py  workers.py  workout_manager.py
src/garmin_penguin_express.egg-info/: SOURCES.txt  top_level.txt
